# point-cloud-bounding-boxes

./: CMakeLists.txt  README.md
data/: frame.pcd
include/: cloud_filter.h  cloud_visualizer.h  euclidean_clustering.h  filter.h  ground_segmentation.h  range_image.h
src/: bounding_boxes.cpp  cloud_filter.cpp  cloud_visualizer.cpp  euclidean_clustering.cpp  filter.cpp  ground_segmentation.cpp  main.cpp  range_image.cpp
